# FilterSamesetBasic

./: CMakeLists.txt  FilterSamesetBasic.pro  ReadMe.txt
doc/: difference_between_stlList_and_QList.txt
src/: CMakeLists.txt  mainwidget.cpp  mainwidget.h
ui/: mainwidget.ui
